# meta-hackthon-team-THE-TENETS

./: Dockerfile  README.md  fixed_validation.sh  inference.diff  inference.py  openenv.yaml  openenv_files.txt  orig_inference.py  pyproject.toml  requirements.txt  reset_response.json  state_response.json  step_response.json  validate-submission.sh
env/: environment.py  graders.py  models.py  tasks.py
scripts/: inference.py
server/: app.py
tests/: test_api_score_bounds.py  test_score_bounds.py
